--- a/css/loginform.html
+++ b/css/loginform.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <input type="text">
-        <button>submit</button>
-    </form>
+<ul>
+    <li><a href="">Lorem.</a></li>
+    <li><a href="">Placeat.</a></li>
+    <li><a href="">Ipsum.</a></li>
+</ul>
 </body>
-</html>
+</html
