--- a/scss/index.html
+++ b/scss/index.html
@@ -1,17 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
-        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae quam harum excepturi ab totam mollitia iure dolores quia eos provident modi repellat veniam sapiente aspernatur rem dicta, architecto, placeat aut.</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</body>
-</html>
+<h1>kodluyoruz</h1>
+<!--acıklamaları yaz--> 
