--- a/scss/index.html
+++ b/scss/index.html
@@ -1,2 +1,20 @@
-<h1>kodluyoruz</h1>
-<!--acıklamaları yaz--> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <H1>Muhammed Atay</H1>
+    <h2>Hakkımda Bilmeniz Gerekenler:</h2>
+    <p>Merhaba Ben Muhammed Atay</p>
+    <P>Batmanlıyım</P>
+    <p>20 Yaşındayım</p>
+    <P>Meslek: Şuan Yazılım Öğreniyorum</P>
+    <H2>Sevdiğim Diziler</H2>
+    <P>Bilim Kurgu</P>
+    <P>Aksiyon </P>
+    <P>Türk Komedi </P>
+</body>
+</html>
