Bilim Kurgu Kahramanı Geçmişi

--- a/scss/calısma.html
+++ b/scss/calısma.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="#footer">
+        Kitap Satın Alma Ve En Alt Sayfaya Geçmek İçin Tıklayın.
+    </a>
     <h1>Muhammed Atay</h1>
 
     <H3>En Sevdiğim Bilim Kurgu</H3>
@@ -59,6 +61,26 @@ height="350" src="deadpool.jpg" alt="deadpool İmages">
     <h1>Çalışmam Alıntıdır</h1>
 <a href="https://www.oncasey.com/eglence/deadpool-kimdir-iste-deadpoolun-gucleri-ve-hikayesi/"
 target="_blank" >Sayfanın Kopyasına Gitmek İçin Lütfen Buraya Tıklayın</a>
+<hr>
+<h2>Filme Gitmek İçin Aşağıdaki Linke Basınız</h2>
+<p>
+    <li><a href="https://www.filmmodu.tv/d-pool-turkce-dublaj-fhd-film-izle"
+        target="_blank">
+        Filme Gitmek İçin Tıklayın
+    </a>
+</li>
+<li> <a href="https://www.trendyol.com/deadpool-cizgi-roman-y-s16810"
+    target="_blank">
+    
+    Kitap Satın Almak İçin Lütfen Linke Tıklayın.
+</a>
+
+</li>
+    </p>
+ 
+   
+    <h1 id="footer">Tekrar Görüşmek Üzere</h1>
+
 
 
 
